# pyBrAPI

./: CITATION.cff  CITATIONS.cff  README.md  pyproject.toml
pybrapi/: __init__.py  authentication.py
pybrapi/__utils__/: __collector__.py
pybrapi/models/: core.py  germplasm.py  phenotyping.py  subclasses.py
pybrapi/modules/: core.py  germplasm.py  phenotyping.py
tests/: test_init.py
